fix the cards moving too far from center each time it's the player's turn

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -350,17 +350,17 @@ EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWr
 LastLevel=/Game/Map
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=DataTableEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=DataTableEditor
@@ -397,17 +397,17 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Tuto/DT_CardParamWarrior
-MRUItem1=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem2=/Game/Blueprints/BPFL_Card
-MRUItem3=/Game/Blueprints/Tuto/WBP_CardHand
-MRUItem4=/Game/Blueprints/Widget/WBP_Line
-MRUItem5=/Game/Blueprints/Widget/WBP_SpellCard
-MRUItem6=/Game/Blueprints/Tuto/BPI_AddCard
-MRUItem7=/Game/Blueprints/BP_PlayerController
-MRUItem8=/Game/Blueprints/BP_CardGameMode
-MRUItem9=/Game/Blueprints/Widget/WBP_Card
-MRUItem10=/Game/Blueprints/Widget/WBP_Board
+MRUItem0=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem1=/Game/Blueprints/BPFL_Card
+MRUItem2=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem3=/Game/Blueprints/Widget/WBP_Line
+MRUItem4=/Game/Blueprints/Tuto/BPI_AddCard
+MRUItem5=/Game/Blueprints/BP_PlayerController
+MRUItem6=/Game/Blueprints/BP_CardGameMode
+MRUItem7=/Game/Blueprints/Widget/WBP_Card
+MRUItem8=/Game/Blueprints/Widget/WBP_Board
+MRUItem9=/Game/Blueprints/Tuto/DT_CardParamWarrior
+MRUItem10=/Game/Blueprints/Widget/WBP_SpellCard
 MRUItem11=/Game/Blueprints/Tuto/DT_CardParamRogue
 MRUItem12=/Game/Blueprints/Tuto/DT_CardParamWizard
 MRUItem13=/Game/Blueprints/Tuto/DT_CardParam
@@ -538,7 +538,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Tuto
+ContentBrowserDrawer.SelectedPaths=
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1389,8 +1389,8 @@ DeveloperSettingsBackedByCVars="\"Object.Enhanced Input.PlatformSettings\" \"Obj
 PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Object.ImportSettings.BaseMapTextureSuffixes\" "
 DataflowSettings="\"Object.NodeColors.NodeColorsMap\" "
 ModelingComponentsSettings="\"Object.Modeling Tools.Modeling Tools|New Mesh Objects\" "
-TextBlock=
-TextLayoutWidget=
+TextBlock="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_Board_C=
 WBP_SpellCard_C=
@@ -2681,7 +2681,7 @@ RecentsFiles=E:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/
 RecentsFiles=D:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
