--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -360,7 +360,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=DataTableEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=DataTableEditor
@@ -538,7 +538,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Tuto
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1368,9 +1368,9 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 [DetailPropertyExpansion]
 CameraActor="\"Object.CameraActor.CameraComponent.Object.PostProcess.PostProcessSettings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget=
-Visual=
-Object=
+Widget="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" "
