--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -126,7 +126,7 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=2554,Y=1360)
+LastSize=(X=2554,Y=1352)
 LastExecutedLaunchDevice=Windows@PC-THEO
 LastExecutedLaunchName=PC-THEO
 LastExecutedPIEPreviewDevice=
@@ -134,7 +134,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
 NewWindowWidth=2554
-NewWindowHeight=1360
+NewWindowHeight=1352
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -322,7 +322,7 @@ TakeRecorderMicrophoneAudioSourceSettings=
 TakeRecorderMicrophoneAudioManager=
 MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
-BP_PlayerController_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
+BP_PlayerController_C=
 K2Node_BreakStruct=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
 EdGraph=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
@@ -346,23 +346,24 @@ FillHand_10=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.De
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
 EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
 WBP_Line_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
+K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
 
 [EditorStartup]
 LastLevel=/Game/Map
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=DataTableEditor
@@ -379,7 +380,6 @@ RecentAssetEditors=EnumEditor
 RecentAssetEditors=
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Board.WBP_Board
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Card.WBP_Card
-OpenAssetsAtExit=/Game/Blueprints/BP_CardGameMode.BP_CardGameMode
 OpenAssetsAtExit=/Game/Blueprints/BP_PlayerController.BP_PlayerController
 OpenAssetsAtExit=/Game/Blueprints/Tuto/BPI_AddCard.BPI_AddCard
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Line.WBP_Line
@@ -404,11 +404,11 @@ MRUItem2=/Game/Blueprints/Tuto/WBP_CardHand
 MRUItem3=/Game/Blueprints/Widget/WBP_Line
 MRUItem4=/Game/Blueprints/Tuto/BPI_AddCard
 MRUItem5=/Game/Blueprints/BP_PlayerController
-MRUItem6=/Game/Blueprints/BP_CardGameMode
-MRUItem7=/Game/Blueprints/Widget/WBP_Card
-MRUItem8=/Game/Blueprints/Widget/WBP_Board
-MRUItem9=/Game/Blueprints/Tuto/DT_CardParamWarrior
-MRUItem10=/Game/Blueprints/Widget/WBP_SpellCard
+MRUItem6=/Game/Blueprints/Widget/WBP_Card
+MRUItem7=/Game/Blueprints/Widget/WBP_Board
+MRUItem8=/Game/Blueprints/Widget/WBP_SpellCard
+MRUItem9=/Game/Blueprints/BP_CardGameMode
+MRUItem10=/Game/Blueprints/Tuto/DT_CardParamWarrior
 MRUItem11=/Game/Blueprints/Tuto/DT_CardParamRogue
 MRUItem12=/Game/Blueprints/Tuto/DT_CardParamWizard
 MRUItem13=/Game/Blueprints/Tuto/DT_CardParam
@@ -1370,11 +1370,11 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 [DetailPropertyExpansion]
 CameraActor="\"Object.CameraActor.CameraComponent.Object.PostProcess.PostProcessSettings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget=
+Visual=
+Object=
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_Array_C=
@@ -1394,9 +1394,9 @@ ModelingComponentsSettings="\"Object.Modeling Tools.Modeling Tools|New Mesh Obje
 TextBlock="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-WBP_Board_C=
-WBP_SpellCard_C=
-WBP_Line_C=
+WBP_Board_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WBP_SpellCard_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WBP_Line_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CommonInputActionDataBase="\"Struct.KeyboardInputTypeInfo\" \"Struct.GamepadInputOverrides\" "
 TableRowBase="\"Struct.KeyboardInputTypeInfo\" \"Struct.GamepadInputOverrides\" "
 GenericInputData_C="\"Object.Properties.DefaultClickAction\" \"Object.Properties.DefaultBackAction\" "
@@ -1414,9 +1414,9 @@ SafeZone="\"Object.Render Transform.RenderTransform\" "
 WBP_SpellCardTuto_C=
 WBP_CardHand_C=
 WBP_CardHUD_C=
-BP_PlayerController_C="\"Object.Game.Game|Feedback\" "
-PlayerController="\"Object.Game.Game|Feedback\" "
-Controller="\"Object.Game.Game|Feedback\" "
+BP_PlayerController_C=
+PlayerController=
+Controller=
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_CardType.E_CardType=0
@@ -2682,11 +2682,11 @@ TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=E:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=E:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
