adjust outliner feedback and start to develop interaction between cards

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -322,7 +322,7 @@ TakeRecorderMicrophoneAudioSourceSettings=
 TakeRecorderMicrophoneAudioManager=
 MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
-BP_PlayerController_C=
+BP_PlayerController_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
 K2Node_BreakStruct=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
 EdGraph=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
@@ -1363,6 +1363,7 @@ InputMappingContext.Mappings=True
 InputMappingContext.Description=True
 WBP_CardHUD_C.Default=True
 WBP_Line_C.Default=True
+BP_PlayerController_C.Default=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
@@ -1468,8 +1469,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2682,8 +2683,8 @@ TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MessageLog]
 LastLogListing=BlueprintLog
