add interaction with some cards + add energy management

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -301,7 +301,7 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWra
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 WBP_Card_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 WBP_Board_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
-TextBlock=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
+TextBlock=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 CommonInputSettings=EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,CommonInputSettings.Input.CommonInputPlatformSettings_Windows
 InputModifierSmoothDelta=
 InputModifierDeadZone=
@@ -335,9 +335,9 @@ GetCardPositionAndAngle=PropertyWrapper.DefaultValueCategory.TextureArray,Proper
 MulticastInlineDelegatePropertyWrapper=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
 GetHoveredCardYDisplacement=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
 GetHoveredCardYDisplacement_11=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
-K2Node=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
+K2Node=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 WBP_CardHUD_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
-K2Node_Variable=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
+K2Node_Variable=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 PlayerController=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
 GetRandomCard=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
 GetRandomCard_1=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
@@ -357,6 +357,12 @@ K2Node_CallParentFunction=PropertyWrapper.DefaultValueCategory.TextureArray,Prop
 Image=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 SetTarget=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 SetTarget_6=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
+K2Node_FormatText=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
+WBP_Protection_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
+WBP_Equipment_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
+WBP_FireBall_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
+EnergyCheck=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
+EnergyCheck_15=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 
 [EditorStartup]
 LastLevel=/Game/Map
@@ -367,25 +373,25 @@ DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=DataTableEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=DataTableEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=DataTableEditor
+RecentAssetEditors=DataTableEditor
+RecentAssetEditors=DataTableEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -402,6 +408,10 @@ OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Line.WBP_Line
 OpenAssetsAtExit=/Game/Blueprints/Tuto/WBP_CardHand.WBP_CardHand
 OpenAssetsAtExit=/Game/Blueprints/Tuto/WBP_SpellCardTuto.WBP_SpellCardTuto
 OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard.WBP_SlashCard
+OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall.WBP_FireBall
+OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection.WBP_Protection
+OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment.WBP_Equipment
+OpenAssetsAtExit=/Game/Blueprints/Tuto/DT_CardParamWizard.DT_CardParamWizard
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -414,28 +424,28 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
-MRUItem1=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
-MRUItem2=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
-MRUItem3=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
-MRUItem4=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
-MRUItem5=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
-MRUItem6=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
-MRUItem7=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
-MRUItem8=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
-MRUItem9=/Game/Blueprints/Tuto/DT_CardParamWarrior
-MRUItem10=/Game/Blueprints/Tuto/Cards
-MRUItem11=/Game/Blueprints/Tuto/PrimaryDataAsset
-MRUItem12=/Game/Blueprints/Tuto/DT_CardParamRogue
-MRUItem13=/Game/Blueprints/Tuto/DT_CardParamWizard
-MRUItem14=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem15=/Game/Blueprints/BPFL_Card
-MRUItem16=/Game/Blueprints/Tuto/WBP_CardHand
-MRUItem17=/Game/Blueprints/Widget/WBP_Line
-MRUItem18=/Game/Blueprints/Tuto/BPI_AddCard
-MRUItem19=/Game/Blueprints/BP_PlayerController
-MRUItem20=/Game/Blueprints/Widget/WBP_Card
-MRUItem21=/Game/Blueprints/Widget/WBP_Board
+MRUItem0=/Game/Blueprints/Tuto/DT_CardParamWizard
+MRUItem1=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
+MRUItem2=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
+MRUItem3=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
+MRUItem4=/Game/Blueprints/Tuto/DT_CardParamWarrior
+MRUItem5=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
+MRUItem6=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem7=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem8=/Game/Blueprints/Widget/WBP_Line
+MRUItem9=/Game/Blueprints/Tuto/BPI_AddCard
+MRUItem10=/Game/Blueprints/BP_PlayerController
+MRUItem11=/Game/Blueprints/Widget/WBP_Card
+MRUItem12=/Game/Blueprints/Widget/WBP_Board
+MRUItem13=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
+MRUItem14=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
+MRUItem15=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
+MRUItem16=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
+MRUItem17=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
+MRUItem18=/Game/Blueprints/Tuto/Cards
+MRUItem19=/Game/Blueprints/Tuto/PrimaryDataAsset
+MRUItem20=/Game/Blueprints/Tuto/DT_CardParamRogue
+MRUItem21=/Game/Blueprints/BPFL_Card
 MRUItem22=/Game/Blueprints/Tuto/DT_CardParam
 MRUItem23=/Game/Blueprints/Widget/WBP_SpellCard
 MRUItem24=/Game/Blueprints/BP_CardGameMode
@@ -561,21 +571,21 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Tuto
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Tuto/CardEffect/Wizard
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Wizard
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Warrior
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Textures/Warrior
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Warrior
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Rogue
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Wizard
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Widget
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Inputs
 ContentBrowserDrawer.JumpMRU=/All
@@ -1595,6 +1605,7 @@ Controller=
 NewWidgetBlueprint_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_SlayCard_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_SlashCard_C=
+WBP_Protection_C=
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_CardType.E_CardType=0
