--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -363,21 +363,24 @@ WBP_Equipment_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrappe
 WBP_FireBall_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 EnergyCheck=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 EnergyCheck_15=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
+WBP_ThunderBolt_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 
 [EditorStartup]
 LastLevel=/Game/Map
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=DataTableEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -386,9 +389,7 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=DataTableEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
@@ -403,14 +404,12 @@ RecentAssetEditors=UserDefinedStructureEditor
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Board.WBP_Board
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Card.WBP_Card
 OpenAssetsAtExit=/Game/Blueprints/BP_PlayerController.BP_PlayerController
-OpenAssetsAtExit=/Game/Blueprints/Tuto/BPI_AddCard.BPI_AddCard
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Line.WBP_Line
 OpenAssetsAtExit=/Game/Blueprints/Tuto/WBP_CardHand.WBP_CardHand
 OpenAssetsAtExit=/Game/Blueprints/Tuto/WBP_SpellCardTuto.WBP_SpellCardTuto
-OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard.WBP_SlashCard
 OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall.WBP_FireBall
-OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection.WBP_Protection
-OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment.WBP_Equipment
+OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt.WBP_ThunderBolt
+OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard.WBP_SlashCard
 OpenAssetsAtExit=/Game/Blueprints/Tuto/DT_CardParamWizard.DT_CardParamWizard
 
 [UMGEditor.Designer]
@@ -424,20 +423,20 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Tuto/DT_CardParamWizard
-MRUItem1=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
-MRUItem2=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
-MRUItem3=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
-MRUItem4=/Game/Blueprints/Tuto/DT_CardParamWarrior
-MRUItem5=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
-MRUItem6=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem7=/Game/Blueprints/Tuto/WBP_CardHand
-MRUItem8=/Game/Blueprints/Widget/WBP_Line
-MRUItem9=/Game/Blueprints/Tuto/BPI_AddCard
-MRUItem10=/Game/Blueprints/BP_PlayerController
-MRUItem11=/Game/Blueprints/Widget/WBP_Card
-MRUItem12=/Game/Blueprints/Widget/WBP_Board
-MRUItem13=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
+MRUItem0=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
+MRUItem1=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
+MRUItem2=/Game/Blueprints/Tuto/DT_CardParamWizard
+MRUItem3=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
+MRUItem4=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
+MRUItem5=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
+MRUItem6=/Game/Blueprints/Tuto/DT_CardParamWarrior
+MRUItem7=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem8=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem9=/Game/Blueprints/Widget/WBP_Line
+MRUItem10=/Game/Blueprints/Tuto/BPI_AddCard
+MRUItem11=/Game/Blueprints/BP_PlayerController
+MRUItem12=/Game/Blueprints/Widget/WBP_Card
+MRUItem13=/Game/Blueprints/Widget/WBP_Board
 MRUItem14=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
 MRUItem15=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
 MRUItem16=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
@@ -571,17 +570,17 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Tuto/CardEffect/Wizard
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Tuto
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Wizard
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Warrior
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Textures/Warrior
@@ -1606,6 +1605,7 @@ NewWidgetBlueprint_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTra
 WBP_SlayCard_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_SlashCard_C=
 WBP_Protection_C=
+WBP_ThunderBolt_C=
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_CardType.E_CardType=0
@@ -1668,8 +1668,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
